# Pipeline-Distribuido-IoT-Edge-RustInPeace

./: .gitignore  README.md  dockerignore
docker/: docker-compose.hub.yml  docker-compose.peer.yml
docker/coordinator/: Dockerfile
docker/edge/: Dockerfile
docker/sensor/: Dockerfile
rust/: Cargo.toml
rust/coordinator/: Cargo.toml
rust/coordinator/src/: main.rs
rust/edge/: Cargo.toml
rust/edge/src/: main.rs
rust/sensor/: Cargo.toml
rust/sensor/src/: main.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
vpn/: hub.conf.example  peer.conf.example
