[workspace]
members = [
    "shared",
    "sensor",
    "edge",
    "coordinator",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
axum = "0.7"
