[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }       
serde = { workspace = true }        
serde_json = { workspace = true }   
tracing = { workspace = true }      
tracing-subscriber = { workspace = true } 
rand = "0.8"
rand_distr = "0.4"

